// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserReducer should handle all defined error types: rejected types DELETE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "errorStatus": 0,
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
    },
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "DELETE_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types GET_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "errorStatus": 0,
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
    },
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "GET_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types UPDATE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "errorStatus": 0,
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
    },
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "UPDATE_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types USER_AUTH 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": true,
      "errorMessage": "MESSAGE",
      "errorStatus": 0,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "USER_AUTH_REJECTED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types DELETE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
    },
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "DELETE_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types GET_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
    },
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "GET_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types UPDATE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": false,
    },
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "UPDATE_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types USER_AUTH 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "admin": true,
      "authorized": true,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": true,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "USER_AUTH_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types USER_LOCALE 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "USER_LOCALE_FULFILLED",
}
`;

exports[`UserReducer should handle all defined pending types: pending types DELETE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
    },
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "DELETE_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types GET_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
    },
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "GET_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types UPDATE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "metaData": undefined,
      "metaId": undefined,
      "metaQuery": undefined,
      "pending": true,
    },
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "UPDATE_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types USER_AUTH 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": true,
      "permissions": Array [],
    },
  },
  "type": "USER_AUTH_PENDING",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 400 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": false,
      "errorMessage": null,
      "errorStatus": null,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 401 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": true,
      "errorMessage": "Lorem test status",
      "errorStatus": 401,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 403 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "admin": false,
      "authorized": false,
      "entitled": false,
      "error": true,
      "errorMessage": "Lorem test status",
      "errorStatus": 403,
      "fulfilled": false,
      "locale": null,
      "pending": false,
      "permissions": Array [],
    },
  },
  "type": "4XX",
}
`;
